<resources>
    //dropdown menu
    <string name="app_name">BudgetApp</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="facebook">Facebook</string>
    <string name="todo">TODO</string>
    <string name="google">Google</string>
    <string name="budget_wallet">Budget Wallet</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="password">Password</string>

    <!-- Facebook Auth-->
    <string name="facebook_application_id" translatable="false">3121045928188050</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb3121045928188050</string>
    <string name="username">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="given_name">Given name</string>
    <string name="budget">Budget</string>
    <string name="date">Date</string>
    <string name="set_up_account">Set up Account</string>
    <string name="select">Select Item</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_profile_pic_edit">ProfilePicEdit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_of_user">Name Of User</string>
    <string name="previousBtn">≤</string>
    <string name="nextBtn">≥</string>
    <string name="forgot_password">Forgot Password?</string>

</resources>
